--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "es6-promise": "^4.1.0",
     "fastclick": "^1.0.6",
     "vue": "^2.2.2",
+    "vue-lazyload": "^1.0.3",
     "vue-router": "^2.2.0",
     "vuex": "^2.1.1",
     "vuex-i18n": "^1.3.1",
