--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
+    "server": "node build/server.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit",
-    "server": "node build/serve.js"
+    "test": "npm run unit"
   },
   "dependencies": {
     "es6-promise": "^4.1.0",
