--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "es6-promise": "^4.1.0",
     "fastclick": "^1.0.6",
+    "nprogress": "^0.2.0",
     "vue": "^2.2.2",
     "vue-lazyload": "^1.0.3",
     "vue-router": "^2.2.0",
